adjusting default insertion of configuration